# spectrum-analyzer

./: Analyzer.ccp  Cargo.toml  readme.adoc
apollo_egui/: Cargo.toml
apollo_egui/src/: lib.rs
plugins/spectrum-analyzer/: Cargo.toml
plugins/spectrum-analyzer/src/: lib.rs
spectrum-analyzer/: Cargo.toml
spectrum-analyzer/src/: analyzer.rs  lib.rs  main.rs  plugin.rs
spectrum-analyzer/tests/: analyzer_tests.rs
src/: audio_setup.rs  buffer.rs  context.rs  editor.rs  lib.rs  midi.rs  params.rs  plugin.rs  wrapper.rs
src/buffer/: samples.rs
src/context/: gui.rs  init.rs  process.rs
src/midi/: sysex.rs
src/plugin/: vst3.rs
src/wrapper/: state.rs  vst3.rs
