[package]
name = "apollo_egui"
version = "0.1.0"
edition = "2021"

[features]
default = ["opengl", "default_fonts"]
opengl = ["egui-baseview/opengl"]
default_fonts = ["egui-baseview/default_fonts"]
rayon = ["egui-baseview/rayon"]

[dependencies]
baseview = {git = "https://github.com/RustAudio/baseview.git", rev = "579130ecb4f9f315ae52190af42f0ea46aeaa4a2"}
egui-baseview = { git = "https://github.com/BillyDM/egui-baseview.git", rev = "d11742477e86d48f5ff718457244f58a713d68c2", default-features = false }